# CPP_Learning_Code

./: .clang-format  .gitignore  CMakeLists.txt
chap-01/: 1-hello_world.cpp  2-parrot.cpp  3-array.cpp  4-calculator.cpp  CMakeLists.txt
chap-01/3-build-errors/: 1-structs.cpp  2-class.cpp  3-hello.cpp  4-car.hpp  4-driver.hpp  4-main.cpp  5-main.cpp  5-tac.hpp  5-tic.hpp
chap-01/4-link-errors/: 1-hello_wordl.cpp  2-add.cpp  2-main.cpp  3-main.cpp  3-sub.cpp  4-add.cpp  4-debug.hpp  4-main.cpp  4-sub.cpp
chap-02/: 1-first_class.cpp  2-constructor.cpp  3-clone.cpp  3-destructor.cpp  CMakeLists.txt
chap-02/4-modules/: Rectangle.cpp  main.cpp
chap-02/4-rectangle/: Rectangle.cpp  Rectangle.h  main.cpp
chap-02/5-operators/: main.cpp
chap-02/5-polygon/: Polygon.cpp  Polygon.h  main.cpp  realloc.h
chap-03/: 2-sequentials.cpp  4-strings.cpp  5-tuples.cpp  CMakeLists.txt
chap-03/1-lifespan/: Box.cpp  Box.h
chap-03/1-teachers/: DataBase.cpp  DataBase.h
chap-03/2-pokemons/: Journey.cpp  PC.h  PokeCenter.h  Pokedex.h  Pokemon.h  ProfessorOak.h  Trainer.h
chap-03/3-allocation/: Bag.cpp  Cat.cpp  Cat.h
chap-03/3-associatives/: keys.h
chap-03/3-cache/: Cache.cpp  Model.h  Texture.h
chap-03/4-move/: InPlace.cpp  Move.cpp
chap-04/: CMakeLists.txt
chap-04/1-hierarchy/: Boss.cpp  Boss.h  Employee.h  Hierarchy.cpp  Intern.cpp  Intern.h  Rank.h  Staff.cpp  Staff.h
chap-04/2-farm/: Animal.h  Cat.h  Chicken.h  Cow.h  Dog.h  FarmHouse.cpp  Opera.h
chap-04/3-vehicles/: Car.h  FlyingCar.h  Program.cpp  Scooter.h  Vehicle.h
chap-05/: 1-vectors.cpp  2-sequentials.cpp  4-strings.cpp  5-tuples.cpp  CMakeLists.txt
chap-05/1-teachers/: DataBase.cpp
chap-05/2-pokemons/: ProfessorOak.h  Trainer.h
chap-05/3-associatives/: keys.h  main.cpp
chap-05/3-cache/: Model.h
tp-01/: CMakeLists.txt  Réponse.md  TP1.md  letter_count.cpp  translator.cpp
tp-02/: CMakeLists.txt  Clock.h  Event.h  MinuteHand.h  Parsing.cpp  Parsing.h  Reminders.cpp  Reponse.md  SecondHand.h  TP2.md  letter_count_v2.cpp  letter_count_v2.h
tp-03/: CMakeLists.txt  TP3.md
tp-03/PhoneBook/: Tests.cpp  Tests.h
tp-03/Pokemons/: PC.cpp  PC.h  Pokeball.h  Pokemon.h  Stdafx.h  Tests.cpp  Trainer.h
tp-04/: CMakeLists.txt  TP4.md
tp-04/PhoneCalls/: Main.cpp  Person.h  Phone.h
tp-04/Shapes/: circle.hpp  line.hpp  line_seg.hpp  main.cpp  point.hpp  rectangle.hpp  shape.hpp
tp-json/: ArrayNode.hpp  BooleanLeaf.hpp  BooleanNode.hpp  CMakeLists.txt  JsonParser.cpp  JsonParser.hpp  Node.cpp  Node.hpp  NodeKind.hpp  Node_ptr.hpp  NullNode.hpp  NumberLeaf.cpp  NumberLeaf.hpp  NumberNode.hpp  ObjectNode.hpp  Parser.cpp  StringLeaf.hpp  StringNode.hpp  enonce.md  json.hpp
tp-json/code_fourni_aux_etudiants/: ArrayNode.cpp  BooleanLeaf.cpp  BooleanLeaf.hpp  JsonParser.cpp  JsonParser.hpp  Node.hpp  Node_ptr.hpp  NumberLeaf.cpp  NumberNode.hpp  ObjectNode.cpp  ObjectNode.hpp  StringLeaf.cpp  all_nodes.hpp
tp-json/tests/: 00_basic_node.cpp  01_basic_node.cpp  01_basic_null.cpp  01_basic_nullnode.cpp  02_basic_boolean.cpp  02_basic_numbernode.cpp  03_basic_number.cpp  03_basic_stringnode.cpp  04_basic_arraynode.cpp  04_basic_string.cpp  05_basic_array.cpp  05_basic_objectnode.cpp  06_basic_object.cpp  10_make_ptr.cpp  10_pointers.cpp  11_array_add.cpp  12_object_add.cpp  12_objectnode_add.cpp  13_height_and_nodecount.cpp  14_object_dico.cpp  20_output_operator.cpp  21_explicit_cast.cpp  21_parser_leaf.cpp  21_parser_leaves.cpp  22_equality.cpp  22_parser_array.cpp  23_parser_object.cpp  24_parser_pokedex.cpp  24_pokedex.cpp  30_output_operator.cpp  30_parser0.cpp  31_equality.cpp  31_explicit_cast.cpp  32_explicit_cast.cpp  32_explicit_cast_const.cpp  32_printparse_consistency.cpp  33_children_count.cpp  33_equality.cpp  34_has_child.cpp  34_has_key.cpp  (+18 more)
tp-json/tests/json/: array_hexadecimal.json  cpp2022.json  object_alphabet.json  pokedex.json  string_nasty.json
tp-json/tests/old/: 50_number_node_hardmode.cpp  NullNode.hpp  array_large_numbers.json  basic_node_instances.cpp  json.hpp
