add_executable(c2-1-first_class 1-first_class.cpp)
add_executable(c2-2-constructor 2-constructor.cpp)
add_executable(c2-3-clone 3-clone.cpp)

add_executable(c2-4-rectangle
    4-rectangle/main.cpp
    4-rectangle/Rectangle.cpp
    4-rectangle/Rectangle.h
)

add_executable(c2-5-polygon
    5-polygon/main.cpp
    5-polygon/realloc.h
    5-polygon/Polygon.cpp
    5-polygon/Polygon.h
)
