add_executable(c5-1-teachers
    1-teachers/DataBase.cpp
    1-teachers/DataBase.h
)

add_executable(c5-2-pokemons
    2-pokemons/Journey.cpp
    2-pokemons/PC.h
    2-pokemons/PokeCenter.h
    2-pokemons/Pokedex.h
    2-pokemons/Pokemon.h
    2-pokemons/ProfessorOak.h
    2-pokemons/Trainer.h
)

add_executable(c5-3-cache
    3-cache/Cache.cpp
    3-cache/Model.h
    3-cache/Texture.h
)
